<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_lock"
        android:icon="@drawable/ic_action_lock"
        android:title="Lock"
        android:showAsAction="ifRoom|withText"
        yourapp:showAsAction="ifRoom|withText"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/action_key"
        android:icon="@drawable/ic_action_key"
        android:title="Key"
        android:showAsAction="never"
        yourapp:showAsAction="never"
        tools:ignore="AppCompatResource"/>
    <item
        android:id="@+id/action_calendar"
        android:icon="@drawable/ic_action_calendar"
        android:title="Calendar"
        android:showAsAction="never"
        yourapp:showAsAction="never"
        tools:ignore="AppCompatResource"/>

</menu>
