<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_action_save"
        android:title="Save"
        android:showAsAction="ifRoom|withText"
        yourapp:showAsAction="ifRoom|withText"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="Search"
        android:showAsAction="never"
        yourapp:showAsAction="never"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/action_world"
        android:icon="@drawable/ic_action_world"
        android:title="World"
        android:showAsAction="never"
        yourapp:showAsAction="never"
        tools:ignore="AppCompatResource" />

</menu>
